# ServerTestTask

./: CMakeLists.txt
ArrayTransformation/: CMakeLists.txt
ArrayTransformation/include/: Array.h  ArrayIntersect.h  ArrayReversedUnion.h  ArraySort.h  ArrayTransformer.h  Intersection.h  QuickSortTemp.h
ArrayTransformation/src/: Array.cpp  ArrayIntersect.cpp  ArrayReversedUnion.cpp  ArraySort.cpp  ArrayTransformer.cpp
apps/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  tests.cpp
